--- a/attendnow/attendance/templates/attendance/dashboard.html
+++ b/attendnow/attendance/templates/attendance/dashboard.html
@@ -52,7 +52,7 @@
             <div style="font-size: 18px; color: #001A2F;">Settings</div>
         </div>
         <!-- New Attendance Records Box -->
-        <div style="background-color: #FFFFFF; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); padding: 40px; text-align: center; cursor: pointer;" onclick="window.location.href='{% url 'attendance_records' %}'">
+        <div style="background-color: #FFFFFF; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); padding: 40px; text-align: center; cursor: pointer;" onclick="window.location.href='{% url 'weekly_attendance_view' %}'">
             <i class="fas fa-file-alt" style="font-size: 40px; color: #001A2F; margin-bottom: 20px;"></i>
             <div style="font-size: 18px; color: #001A2F;">Attendance Records</div>
         </div>
